# stt-tts-using-api-only

./: .dockerignore  .env  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: websocket.py
app/core/: audio_buffer.py  transcriber.py  translator.py  vad.py
app/models/: schemas.py
app/utils/: audio.py  lang_map.py
scripts/: download_models.py
