[project]
name = "translation_pipeline"
version = "1.0.0"
description = "to translate real time audio from video call"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    
    "numpy>=1.26.0",
    "pydantic-settings>=2.2.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "silero-vad>=5.1",
    "soundfile>=0.12.1",
    "transformers>=4.44.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]
